--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,9 @@ body {
   border-radius: 15px;*/
 }
 
-h3 {
+/*h3 {
   border-bottom: solid 4px gray;
-  padding-bottom: 8px;
+  padding-bottom: 8px;*/
 }
 footer {
   background-color: #b3b3cc;
