--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  font-family: "Verdana", sans-serif;
   margin: 10px auto;
 }
 /*img {
@@ -17,7 +16,8 @@ body {
 
 h4 {
   border-bottom: solid 4px gray;
-    margin: 10px auto;
+    margin: 25px auto;
+    color: #df691a;
   /*padding-bottom: 8px;*/
 }
 /*.footer {
@@ -27,6 +27,6 @@ h4 {
 }
 
 p {
-  display: block;
   margin-top: 5px;
+  margin-bottom: 25px;
 }
